# soft-architect-ai

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER_COMPOSE_AUDIT.md  DOCKER_VALIDATION_REPORT.md  FINAL_STATUS_REPORT.md  GITHUB_ACTIONS_CHANGES_SUMMARY.md  GITHUB_ACTIONS_ERRORS_EXPLAINED.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_QUICK_REFERENCE.md  QUICK_START_GUIDE.es.md  README.md  docker-compose.yml  main.py  pyrightconfig.json  requirements.txt  requirements.txt.backup  requirements.txt.new  start_stack.sh  stop_stack.sh
.github/workflows/: backend-ci.yaml  ci-master.yaml  docker-build.yaml  frontend-ci.yaml  lint.yml
api/v1/: router.py
context/: SECURITY_HARDENING_POLICY.en.md  SECURITY_HARDENING_POLICY.es.md
context/10-BUSINESS_AND_SCOPE/: EXECUTIVE_SUMMARY_MVP.en.md  EXECUTIVE_SUMMARY_MVP.es.md  EXECUTIVE_SUMMARY_MVP.md  USER_JOURNEY_MAP.en.md  USER_JOURNEY_MAP.es.md  USER_JOURNEY_MAP.md  VISION_AND_PROMISE.en.md  VISION_AND_PROMISE.es.md  VISION_AND_PROMISE.md
context/20-REQUIREMENTS_AND_SPEC/: ACCESSIBILITY_DESKTOP_CHECKLIST.en.md  ACCESSIBILITY_DESKTOP_CHECKLIST.es.md  ACCESSIBILITY_DESKTOP_CHECKLIST.md  DEFINITION_OF_READY.en.md  DEFINITION_OF_READY.es.md  DEFINITION_OF_READY.md  DOCUMENTATION_STANDARDS.en.md  DOCUMENTATION_STANDARDS.es.md  DOCUMENTATION_STANDARDS.md  REQUIREMENTS_ANALYSIS.en.md  REQUIREMENTS_ANALYSIS.es.md  REQUIREMENTS_ANALYSIS.md  SECURITY_AND_PRIVACY_RULES.en.md  SECURITY_AND_PRIVACY_RULES.es.md  SECURITY_AND_PRIVACY_RULES.md  TESTING_STRATEGY.en.md  TESTING_STRATEGY.es.md  TESTING_STRATEGY.md
context/30-ARCHITECTURE/: ACTIVATION_PROMPTS.en.md  ACTIVATION_PROMPTS.md  API_INTERFACE_CONTRACT.en.md  API_INTERFACE_CONTRACT.es.md  DESIGN_SYSTEM.en.md  DESIGN_SYSTEM.es.md  ERROR_HANDLING_STANDARD.en.md  ERROR_HANDLING_STANDARD.es.md  PROJECT_STRUCTURE_MAP.en.md  PROJECT_STRUCTURE_MAP.es.md  PROJECT_STRUCTURE_MAP.md  TECH_STACK_DETAILS.en.md  TECH_STACK_DETAILS.es.md  TECH_STACK_DETAILS.md  UI_WIREFRAMES_AND_PROMPTS.en.md  UI_WIREFRAMES_AND_PROMPTS.es.md  UI_WIREFRAMES_AND_PROMPTS.md
context/40-ROADMAP/: GITFLOW_WORKFLOW.en.md  GITFLOW_WORKFLOW.es.md  ROADMAP_PHASES.en.md  ROADMAP_PHASES.es.md  ROADMAP_PHASES.md
core/: config.py  errors.py
doc/: DOCUMENTATION_VALIDATION_CHECKLIST.md  INDEX.md  TEST_ASSESSMENT_VISUAL.md  TEST_COVERAGE_DASHBOARD.md
doc/00-VISION/: CONCEPT_WHITE_PAPER.en.md  CONCEPT_WHITE_PAPER.md  WHAT_WE_ARE_BUILDING.es.md
doc/01-MEMORIA/: MEMORIA_METODOLOGICA.md
doc/01-PROJECT_REPORT/: ANALYSIS_AND_CORRECTIONS_SUMMARY.md  CI_CD_FIX_REPORT.es.md  COMPREHENSIVE_TEST_RESULTS.md  CONTEXT_COVERAGE_REPORT.en.md  CONTEXT_COVERAGE_REPORT.md  DOCKER_COMPOSE_UPDATE_SUMMARY.md  DOCKER_SETUP_LOG.en.md  DOCKER_SETUP_LOG.es.md  DOCUMENTATION_VALIDATION_CHECKLIST.md  E2E_TESTS_QUICKSTART.md  FASE9_COMPLETION_SUMMARY.md  FASE_3_DEPLOYMENT.md  FINAL_CONCLUSION.md  FLUTTER_LINT_FIXES_REPORT.en.md  FLUTTER_LINT_FIXES_REPORT.es.md  FUNCTIONAL_TEST_REPORT.md  GREEN_PHASE_VALIDATION_REPORT.md  INITIAL_SETUP_LOG.en.md  INITIAL_SETUP_LOG.es.md  KNOWLEDGE_BASE_COMPLETION.md  MEMORIA_METODOLOGICA.en.md  PROJECT_MANIFESTO.en.md  PROJECT_MANIFESTO.es.md  SESSION_SUMMARY.md  SIMULACION_POC.en.md  SIMULACION_POC.es.md  SIMULACION_POC.md  SYSTEM_E2E_WORKFLOW.md  TESTING_EXECUTION_GUIDE.md  TESTING_QUICK_REFERENCE.md  TEST_COVERAGE_COMPREHENSIVE_REPORT.md  TEST_EXECUTION_LOG.md  TEST_ROADMAP_AND_PENDING_TASKS.md  TEST_STRATEGY_AND_ROADMAP.md  TEST_SUITE_STATUS_REPORT.md
doc/02-SETUP_DEV/: AUTOMATION.en.md  AUTOMATION.es.md  CODE_STANDARDS_COMPLIANCE.md  DOCKER_COMPOSE_GUIDE.en.md  DOCKER_COMPOSE_GUIDE.es.md  DOCUMENTATION_README.md  QUICK_START_GUIDE.en.md  QUICK_START_GUIDE.es.md  README.md  SETUP_GUIDE.en.md  SETUP_GUIDE.es.md  SETUP_GUIDE.md  TOOLS_AND_STACK.en.md  TOOLS_AND_STACK.md
doc/03-HU-TRACKING/: DOCUMENTATION_REORGANIZATION_LOG.md  README.md
domain/schemas/: __init__.py  health.py
infrastructure/: .env.example  docker-compose.yml  pre_check.py  security-validation.sh  validate-docker-setup.sh  verify_setup.py
scripts/: audit-english-compliance.sh  verify-tests.sh
services/rag/: __init__.py  document_loader.py  markdown_cleaner.py
src/server/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  MAIN_PY_COVERAGE_ENHANCEMENT.md  MAIN_PY_REFUERZO_RESUMEN.md  README.es.md  README.md  TEST_COVERAGE_EXPANSION_REPORT.md  pyproject.toml  requirements.txt
src/server/app/: __init__.py  main.py
src/server/app/api/: __init__.py  dependencies.py
src/server/app/api/v1/: __init__.py  chat.py  health.py  knowledge.py
src/server/app/core/: __init__.py  config.py  database.py  security.py
src/server/app/domain/entities/: __init__.py
src/server/app/domain/repositories/: __init__.py
src/server/app/domain/services/: __init__.py
src/server/app/infrastructure/llm/: __init__.py
src/server/app/infrastructure/vector_store/: __init__.py
src/server/app/tests/: conftest.py
src/server/app/tests/fixtures/: __init__.py
src/server/app/tests/integration/: __init__.py
src/server/app/tests/unit/: __init__.py  test_config.py  test_database.py  test_dependencies.py  test_endpoints_extra.py  test_main.py  test_main_handlers.py  test_security.py  test_startup_handlers.py
src/server/core/exceptions/: __init__.py  base.py
src/server/scripts/: ingest.py
src/server/services/: __init__.py
src/server/services/rag/: README.md  __init__.py  vector_store.py
src/server/tests/: conftest.py
src/server/tests/integration/services/rag/: test_vector_store_e2e.py
src/server/tests/unit/app/: test_api_endpoints.py  test_app_coverage.py  test_app_main.py  test_config.py  test_database.py  test_dependencies.py  test_endpoints_coverage_80.py  test_final_coverage_80.py  test_main_advanced_coverage.py  test_main_coverage_80.py  test_security.py  test_security_coverage_80.py
src/server/tests/unit/services/: __init__.py
src/server/tests/unit/services/rag/: test_vector_store.py
tests/: test_api.py  test_architecture.py  test_config.py  test_errors.py  test_rag_loader.py
(+70 files in other folders)
