[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softarchitect-ai"
version = "0.1.0"
description = "Privacy-first AI assistant for software architecture guidance"
requires-python = ">=3.12.3,<4.0"

[tool.mypy]
# MyPy configuration for strict type checking
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.black]
# Black configuration for code formatting
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# isort configuration for import sorting
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*"]
known_first_party = ["app"]

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.poetry.dependencies]
fastapi = "0.115.6"
uvicorn = {version = "0.34.0", extras = ["standard"]}
python-multipart = "0.0.20"
pydantic = "2.10.5"
pydantic-settings = "2.7.1"

[dependency-groups]
dev = [
    "ruff (==0.8.6)",
    "pytest (==8.3.4)",
    "pytest-cov (==6.0.0)",
    "httpx (==0.28.1)"
]
