[project]
name = "softarchitect-ai"
version = "0.1.0"
description = "Privacy-first AI assistant for software architecture guidance"
authors = [{name = "SoftArchitect AI Team", email = "team@softarchitect.local"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12.3"

[tool.poetry]
packages = [{include = "app"}]

[tool.mypy]
# MyPy configuration for strict type checking
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.black]
# Black configuration for code formatting
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# isort configuration for import sorting
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*"]
known_first_party = ["app"]

[tool.pytest.ini_options]
# Pytest configuration
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async (pytest-asyncio)",
]


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C90",  # mccabe complexity
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests
"app/tests/**/*.py" = ["S101"]  # Allow assert in tests under app/tests

[tool.ruff.lint.mccabe]
max-complexity = 10  # Complejidad ciclomática máxima

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "0.115.6"
uvicorn = {version = "0.34.0", extras = ["standard"]}
python-multipart = "0.0.20"
pydantic = "2.10.5"
pydantic-settings = "2.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.6"
pytest = "8.3.4"
pytest-cov = "6.0.0"
httpx = "0.28.1"
pre-commit = "4.0.1"
bandit = "1.8.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
